Increased permgen space for surefire