@@ -175,6 +175,7 @@
                     </systemProperties>
                     <reuseForks>true</reuseForks>
                     <forkCount>1</forkCount>
+                    <argLine>${argLine} -Xmx512m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
